# PartGraph

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/decisions/: ADR-0001-defer-full-jlcparts-archive.md  ADR-0007-search-dos-bounds.md  ADR-0008-semantic-embeddings-and-adaptive-pacing.md
docs/superpowers/specs/: 2026-06-11-partgraph-design.md
schema/: partgraph.dql
src/partgraph/: __init__.py  cli.py  embed.py  schema.py
src/partgraph/ingest/: __init__.py  fetch.py
src/partgraph/load/: __init__.py  loader.py
src/partgraph/normalize/: __init__.py  model.py  promote.py  run.py  tags.py  units.py
src/partgraph/query/: __init__.py  dql_builder.py  parser.py  ranker.py  renderer.py
src/partgraph/sources/: __init__.py  jlcparts.py
src/partgraph/util/: __init__.py  resources.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_adapter_realfile.py  test_dgraph_lifecycle.py  test_gate_pr2.py  test_gate_pr3.py  test_gate_pr4.py  test_ingest_load.py  test_promote_realdata.py  test_unit_realdata.py  test_vector_schema.py
tests/unit/: __init__.py  test_ci_workflow.py  test_cli.py  test_cli_embed.py  test_cli_ingest.py  test_cli_search.py  test_docker_compose.py  test_dql_builder.py  test_embed.py  test_fetch.py  test_gitignore.py  test_jlcparts_adapter.py  test_loader.py  test_normalize.py  test_promote.py  test_pyproject_extras.py  test_query_parser.py  test_ranker.py  test_repo_skeleton.py  test_resources.py  test_schema_file.py  test_staged_part.py  test_stats.py  test_units.py
